@@ -45,7 +45,7 @@ class Axis: public WorksheetElement {
 
 public:
 	enum class Position {Top, Bottom, Left, Right, Centered, Custom};
-	enum class LabelsFormat {Decimal, ScientificE, Powers10, Powers2, PowersE, MultipliesPi};
+	enum class LabelsFormat {Decimal, ScientificE, Powers10, Powers2, PowersE, MultipliesPi, Scientific};
 	enum TicksFlags {
 		noTicks = 0x00,
 		ticksIn = 0x01,
